tests/fixtures/invalid/dim_zero_exponent.gcl
// error: `^0` in a dimension expression is dead weight; rejected for parity
// with unit expressions (#648 N3).
dim Weird = Length^0;
